--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @font-face { font-family: MinecraftFiveBold; src: url('../fonts/MinecraftFiveBold.otf'); }
 @font-face { font-family: MinecraftSeven; src: url('../fonts/MinecraftSeven.otf'); }
 @font-face { font-family: MinecraftTen; src: url('../fonts/MinecraftTen.otf'); }
+@font-face { font-family: NotoSans; src: url('../fonts/NotoSans.otf'); }
 
 * {
 	font-family: "MinecraftSeven";
@@ -289,7 +290,7 @@ body {
 ._oreUIButton__ {
 	line-height: 2rem;
     letter-spacing: 0.04rem;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
 	flex-direction: row;
 	align-items: center;
@@ -367,34 +368,10 @@ span[role="textbox"]::marker {
     line-height: 24px;
 	width: 100%;
 }
-.elementTitleBold {
-	color: #ffffff;
-    letter-spacing: 0.04rem;
-	font-family: MinecraftTen;
-    font-size: 14px;
-    line-height: 24px;
-	width: 100%;
-	margin-top: 6px;
-	text-shadow: 3px 3px #38393a;
-}
-.elementTitle_ {
-	color: #ffffff;
-    letter-spacing: 0.04rem;
-    font-size: 14px;
-}
-.elementTitle__ {
-	color: #ffffff;
-    letter-spacing: 0.04rem;
-    font-size: 14px;
-	margin-top: auto;
-    margin-bottom: auto;
-}
 .elementHeader {
 	color: #ffffff;
     letter-spacing: 0.04rem;
-    font-size: 14px;
-	margin-bottom: 4px;
-    margin-top: 16px;
+    font-size: medium;
     font-family: MinecraftTen;
 	text-shadow: 3px 3px #38393a;
 }
@@ -402,7 +379,6 @@ span[role="textbox"]::marker {
 	color: #d0d1d4;
     letter-spacing: 0.04rem;
     font-size: 13px;
-	margin-top: 4px;
 }
 select {
 	background: none;
@@ -479,10 +455,6 @@ select {
 }
 
 .toggle {
-	margin-top: auto;
-    margin-bottom: auto;
-    margin-left: auto;
-    margin-right: 0;
 	display: block;
 	border-style: none;
 	outline: none;
@@ -508,7 +480,7 @@ select {
 	cursor: auto;
 	background-image: url(../assets/toggle_disabled.png);
 }
-.disabledElement .elementTitle_ {
+.disabledElement .elementTitle {
 	color: #d0d1d4;
 }
 
@@ -712,6 +684,7 @@ pre {
 	background-color: black;
 	width: 420px;
 	max-width: 420px;
+	padding: 4px;
 	margin-left: auto;
 	margin-right: auto;
 	box-shadow: 0 2px 20px 0px black;
@@ -719,11 +692,12 @@ pre {
 	-webkit-app-region: no-drag;
 }
 .toastElement_ {
-	padding: 10px 12px;
+	padding: 6px 8px;
+	border: 2px solid gray;
 	user-select: none;
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: unset;
 	pointer-events: all;
 	-webkit-app-region: no-drag;
 }
@@ -849,7 +823,7 @@ pre {
 	width: 100%;
 	z-index: 1000;
 	margin: -2px;
-	max-height: 138px;
+	max-height: 172px;
     overflow: auto;
 }
 .dropdownOption {
@@ -897,7 +871,6 @@ pre {
 }
 
 .checkbox {
-    margin-right: 8px;
 	display: block;
 	border-style: none;
 	outline: none;
@@ -922,4 +895,19 @@ pre {
 .checkboxDisabled {
 	cursor: auto;
 	background-image: url(../assets/checkbox_disabled.png);
+}
+
+.ModalHeaderButton {
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	user-select: none;
+}
+.ModalHeaderButton:hover {
+	background-color: #58585a;
+}
+.ModalHeaderButton:active {
+	background-color: #313233;
 }
